# tap-mandrill

./: README.md  meltano.yml  pyproject.toml  tox.ini
tap_mandrill/: __init__.py  __main__.py  client.py  streams.py  tap.py
